2009-08-27  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Codons/PadCodon.cs:
	* MonoDevelop.Ide.Gui/SdiWorkspaceLayout.cs: No need to lazy
	  initalize pre created pads.

2009-08-27  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/SdiWorkspaceLayout.cs: Pads are now
	  created on demand.

2009-08-27  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Templates/FileTemplate.cs:
	* MonoDevelop.Ide.Templates/ProjectTemplate.cs:
	* MonoDevelop.Ide.Gui.Dialogs/NewProjectDialog.cs: Only
	  request the composed icon in the desired size. See (Bug
	  534499 - ImageService tries to compose icons at too many
	  sizes).

2009-08-26  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/gui.stetic: Update gtk# dependency.

2009-08-26  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.csproj: Updated dependencies. We now depend
	  on gtk# 2.12.8, Mono 2.4, and Mono.Addins 0.4.

2009-08-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.FindInFiles/FindReplace.cs: The search
	  algorithm can now be used from outside.

2009-08-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.FindInFiles/SearchResultWidget.cs: Optimized
	  the search result widget.

2009-08-26  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui/ViewCommandHandlers.cs: Fix windows
	  build.

2009-08-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.FindInFiles/FindInFilesDialog.cs: Formatted
	  output correctly.

2009-08-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.FindInFiles/Scope.cs:
	* MonoDevelop.Ide.FindInFiles/FindReplace.cs:
	* MonoDevelop.Ide.FindInFiles/FindInFilesDialog.cs:
	* MonoDevelop.Ide.FindInFiles/SearchResultWidget.cs: Fixed
	  "Bug 523423 - Find dialog doesn't show its searching".

2009-08-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/ViewCommandHandlers.cs: Changed the
	  remove trailing whitespace algorihtm to use the
	  Mono.TextEditor data structures - they're not suffering from